# tau

./: .gitmodules  AGENTS.md  Cargo.toml  EXTENSIONS.md  PRD.md  TAU-RT-DESIGN.md  progress.txt
crates/tau-agent/: Cargo.toml
crates/tau-agent/src/: lib.rs
crates/tau-ai/: Cargo.toml
crates/tau-ai/src/: lib.rs
crates/tau-cli/: Cargo.toml
crates/tau-cli/src/: main.rs
crates/tau-iface/: Cargo.toml
crates/tau-iface/src/: async_fd.rs  ffi.rs  lib.rs  tcp.rs  timer.rs  udp.rs
crates/tau-rt/: Cargo.toml
crates/tau-rt/src/: executor.rs  ffi.rs  lib.rs  reactor.rs
crates/tau-tui/: Cargo.toml
crates/tau-tui/examples/: demo.rs  loadtest.rs
crates/tau-tui/src/: component.rs  lib.rs  tui.rs  utils.rs
crates/tau-tui/src/components/: box_component.rs  input.rs  mod.rs  select_list.rs  spacer.rs  text.rs
src/: component.rs  lib.rs  terminal.rs  tui.rs  utils.rs
