[package]
name = "rtui"
version = "0.1.0"
edition = "2021"
description = "A minimal terminal UI library in Rust with differential rendering"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"
unicode-segmentation = "1.11"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
futures = "0.3"
